fix: Make button text be one line on smaller viewports

--- a/src/pages/BuddyProject/BuddyProject.scss
+++ b/src/pages/BuddyProject/BuddyProject.scss
@@ -20,7 +20,7 @@
   &-entry {
     margin-top: 40px;
     max-width: 400px;
-    font-size: 40px;
+    font-size: 38px;
   }
 
   &-list {
